# ITMO_ICT_WebDevelopment_tools_2023-2024

students/k33422/Kirill_glushkov/lab1/: .env.example  alembic.ini  auth.py  encode.py  main.py  mkdocs.yml  models.py
students/k33422/Kirill_glushkov/lab1/alembic/: alembic.ini
students/k33422/Kirill_glushkov/lab1/app/: database.py  models.py  schemas.py
students/k33422/Kirill_glushkov/lab1/docs/: index.md  task1.md  task2.md
students/k33422/Kirill_glushkov/lab1/migrations/: env.py
students/k33422/Kirill_glushkov/lab1/pr1/: main.py
students/k33422/Kirill_glushkov/lab2/task1/: async.py  processes.py  (+1 more)
students/k33422/Kirill_glushkov/lab3/: .env.example  .gitignore  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml
students/k33422/Kirill_glushkov/lab3/migrations/: env.py
students/k33422/Kirill_glushkov/lab3/migrations/versions/: 086d07f0d165_add_test_field.py  bece710a7866_add_category_table_and_update_.py
students/k33422/Kirill_glushkov/lab3/scripts/: format.sh
students/k33422/Kirill_glushkov/lab3/services/app/: main.py
students/k33422/Kirill_glushkov/lab3/services/app/core/: config.py  db.py  utils.py
students/k33422/Kirill_glushkov/lab3/services/app/models/: articles.py  healthcheck.py  main.py  user.py
students/k33422/Kirill_glushkov/lab3/services/app/routers/: __init__.py  articles.py  balances.py  categories.py  root.py  transactions.py  users.py
students/k33422/Kirill_glushkov/lab3/services/app/services/: auth.py  user.py
students/k33422/Kirill_glushkov/lab3/services/parser/: celery_app.py  config.py  database.py  main.py
(+5 files in other folders)
